Add DataRoot configuration to appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
     "NonceSizeBytes": 12,
     "PasswordFile": "password.b64",
     "CipherTextFile": "secret.bin",
+    "DataRoot": "data",
     "ConfigNote": "Adjust iterations for security/performance tradeoff."
   }
 }
