Refactor secret phrase handling and remove unused UserProfile and project files

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,7 @@
     "PasswordFile": "password.b64",
     "CipherTextFile": "secret.bin",
     "DataRoot": "data",
+  "SecretPhraseB64": "a3VyZGlza2Fyw6R2ZW4=",
     "ConfigNote": "Adjust iterations for security/performance tradeoff."
   }
 }
